2015-02-17  Per Bothner  <per@bothner.com>

	* Map.java: Use Scheme-written optimizer for map.
	* CompileMisc.java (validateApplyMap): Removed.

2015-02-14  Per Bothner  <per@bothner.com>

	* Map.java: Use Scheme-written optimizer for for-each.

2015-01-30  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyConvert): Don't apply previous
	"simplification" if value type is nullType.

2015-01-29  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyConvert): If expression type is
	compatible without-coercion with type, just use expression.
	That provides a more precise type.

2015-01-26  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyCallCC): Set DONT_COPY flag.

2015-01-21  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyValuesMap, validateApplyCallCC):
	Use new 2-argument setInlineOnly.

2015-01-11  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyAppendValues): If constant-folding
	returns no values, return QuoteExp.voidObjectExp.
	This avoids warning about using void-valued expression.

2015-01-09  Andrea Bernardini <andrebask@gmail.com>

	* GetNamedPart.java (getMemberPart): Minor generalization.

2014-12-17  Per Bothner  <per@bothner.com>

	* CompileValues.java (validateApplyWithValues): More optimization.

2014-12-16  Per Bothner  <per@bothner.com>

	Better type-checking of 'call-with-values'.
	* ApplyWithValues.java (applyWithValues): Set validate-apply property.
	* CompileValues.java (validateApplyWithValues): New method for
	validating 'apply-with-values'.
	(validateCallWithValues): Maybe use ApplyWithValues.

2014-12-12  Per Bothner  <per@bothner.com>

	* CallWithValues.java: Moved from kawa/standard/call_with_values.java.
	* ApplyWithValues.java: New Procedure.
	* CompileValues.java: New class.
	(validateCallWithValues): New method.

2014-11-22  Per Bothner  <per@bothner.com>

	* RunProcess.java (tokenize): Avoid emitting an extra '\'' in one place.
	Also cleanup structure.
