@@ -1,3 +1,8 @@
+2015-02-24  Per Bothner  <per@bothner.com>
+
+	* MultiplyOp.java (2-argument apply): Handle non-Numeric numbers.
+	(combine): New helper function.
+
 2015-02-17  Per Bothner  <per@bothner.com>
 
 	* Map.java: Use Scheme-written optimizer for map.
